--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -98,7 +98,7 @@ body {
     border-radius: 8px;
     text-align: center;
     font-size: 1.5rem;
-    padding: 16px 08px;
+    padding: 1rem 2rem;
     text-decoration: none;
     
 }
